infrastructure/ms-a/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-a-service
spec:
  selector:
    app: ms-a
  ports:
  - name: express-port
    protocol: TCP
    port: 80
    targetPort: express-port
